nur noch bilder centern

--- a/css/nivo-lightbox/nivo-lightbox.css
+++ b/css/nivo-lightbox/nivo-lightbox.css
@@ -87,7 +87,7 @@
 	text-align: center;
 	width: 100%;
 	height: 100%;
-	color: #fff;
+	color: ##B24821;
 	text-shadow: 0 1px 1px #000;
 }
 .nivo-lightbox-error p {
