--- a/fonts/font-awesome/css/font-awesome.css
+++ b/fonts/font-awesome/css/font-awesome.css
@@ -164,7 +164,7 @@
   font-size: 2em;
 }
 .fa-inverse {
-  color: #ffffff;
+  color: ##B24821#B24821;
 }
 /* Font Awesome uses the Unicode Private Use Area (PUA) to ensure screen
    readers do not read off random characters that represent icons */
