--- a/fonts/font-awesome/less/variables.less
+++ b/fonts/font-awesome/less/variables.less
@@ -7,7 +7,7 @@
 @fa-css-prefix:       fa;
 @fa-version:          "4.3.0";
 @fa-border-color:     #eee;
-@fa-inverse:          #fff;
+@fa-inverse:          ##B24821;
 @fa-li-width:         (30em / 14);
 
 @fa-var-adjust: "\f042";
