--- a/css/style.css
+++ b/css/style.css
@@ -656,3 +656,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#779936', end
 #footer a:hover {
 	color: #333;
 }
+#reservation{
+		color: #B24821;
+
+}
