--- a/public/css/style.css
+++ b/public/css/style.css
@@ -660,3 +660,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#779936', end
 .impressumstyle{
 	color:#333
 }
+
+#reservation{
+		color: #B24821;
+	background-color: #B24821;
+}
